--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
-  <link href="./style.css" rel="stylesheet">
+  <link href="./public/output.css" rel="stylesheet">
+  <link href="./public/style.css" rel="stylesheet">
 </head>
 <body class="bg-slate-800 text-slate-500">  
     <!--header-->
